# conics

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.ci/docker/: python3.12.Dockerfile  python3.x.Dockerfile
.github/: ISSUE_TEMPLATE.md
.github/workflows/: linux.yml  wheels.yml
conics/: __about__.py  __init__.py  _conic.py  _ellipse.py  _harker.py  _nievergelt.py  _parabola.py  _utils.py  fitting.py  geometry.py
docs/: Makefile  bibliography.rst  conf.py  ellipse.rst  fitting.rst  general_form.rst  geometry.rst  glossary.rst  index.rst  installation.rst  license.rst  make.bat  parabola.rst  pose_estimation.rst  readme.rst  references.bib  requirements.txt  usage.rst
docs/_ext/: gallery_dark_mode.py
examples/: GALLERY_HEADER.rst  bezier.py  constraint_parabola.py  contacting_ellipse.py  intersections.py  line_intersections.py  normalization.py  parabolas.py
scripts/: derive_refine_jacobian.py  derive_segment_area.py  generate_teaser.py  normalize-bib.sh
tests/: __init__.py  test_conics.py  test_ellipse.py  test_fitting.py  test_geometry.py  test_parabola.py
